[package]
name = "wasmi_wasi"
version = "0.32.0-beta.6"
documentation = "https://docs.rs/wasmi_wasi"
description = "WASI library support for the wasmi interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasi-common = { version = "17.0", default-features = false, features = ["wiggle_metadata", "trace_log"] }
wasi-cap-std-sync = {version = "17.0", default-features = false }
wiggle = { version = "17.0", default-features = false, features = ["wiggle_metadata"] }
wasmi = { version = "0.32.0-beta.6", path = "../wasmi" }

[dev-dependencies]
wat = "1.0.50"

[features]
default = ["sync"]
sync = []
