[package]
name = "wasmi_wasi"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_wasi"
description = "WASI library support for the wasmi interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
wasi-common = { version = "23.0.1", default-features = false, features = ["sync"]}
wiggle = { version = "23.0.1", default-features = false }
wasmi = { workspace = true, features = ["std"]}

[dev-dependencies]
wat = "1.0.50"
