[package]
name = "wasmi_c_api"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_c_api_impl"
description = "C bindings for the Wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[lib]
name = "wasmi"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false
path = "lib.rs"

[dependencies]
wasmi_c_api_impl = { workspace = true }

[features]
default = ["std"]
std = ["wasmi_c_api_impl/std"]
