[package]
name = "wasmi_c_api"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi_c_api_impl"
description = "C bindings for the Wasmi WebAssembly interpreter"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
publish = false

[lib]
name = "wasmi"
crate-type = ["staticlib", "cdylib"]
doc = false
test = false
doctest = false
path = "lib.rs"

[dependencies]
wasmi_c_api_impl = { workspace = true }

[features]
default = ["std", "memory64"]
std = ["wasmi_c_api_impl/std"]
memory64 = ["wasmi_c_api_impl/memory64"]
simd = ["wasmi_c_api_impl/simd"]
portable-dispatch = ["wasmi_c_api_impl/portable-dispatch"]
indirect-dispatch = ["wasmi_c_api_impl/indirect-dispatch"]
extra-checks = ["wasmi_c_api_impl/extra-checks"]
hash-collections = ["wasmi_c_api_impl/hash-collections"]
prefer-btree-collections = ["wasmi_c_api_impl/prefer-btree-collections"]
deterministic = ["wasmi_c_api_impl/deterministic"]
libm = ["wasmi_c_api_impl/libm"]
prefix-symbols = ["wasmi_c_api_impl/prefix-symbols"]
