[package]
name = "wasmi_profiling_macro"
version.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/wasmi/"
description = "WebAssembly interpreter profiling infrastructure proc. macro"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "1"
heck = "0.5"

[dev-dependencies]
wasmi_profiling = { workspace = true }
serde = { workspace = true }
